--- a/javas/javas.css
+++ b/javas/javas.css
@@ -72,7 +72,7 @@
     color: black;
     font-weight: 400;
     font-size: 14px;
-    font-style: ;
+    /* font-style: ; */
 }
 /* nav kanan */
 /* navbar */
@@ -254,7 +254,7 @@
 
 .grid-kiri {
     width: 50%;
-    display: ;
+    /* display: ; */
 }
 
 .grid-kiri-atas {
