--- a/javas/javas.css
+++ b/javas/javas.css
@@ -161,6 +161,18 @@
     /* align-items: start; */
 }
 
+.ckiri:hover {
+    transform: scale(1.1);
+    transition: 0.3s ease-in-out;
+}
+.content:hover {
+    transform: scale(1.1);
+    transition: 0.3s ease-in-out;
+}
+.ckanan:hover {
+    transform: scale(1.1);
+    transition: 0.3s ease-in-out;
+}
 .content {
     display: inline-block;
     padding: 40px;
@@ -430,6 +442,183 @@
     height: 7rem;
     width: 200px;
     margin: 40px 10px;
+
+}
+.logo-mitra:hover {
+    transform: scale(1.1);
+    transition: 0.3s ease-in-out;
 }
 
 /* halaman 4 */
+
+/* halaman 5 */
+
+.halaman5 {
+    padding: 80px 0 30px;
+    display: block;
+    background-color: rgb(240, 236, 236);
+}
+
+.halaman-luar5 {
+    width: 1000px;
+    max-width: 100%;
+    margin: auto;
+}
+
+.heading5 {
+    margin-bottom: 30px;
+    font-weight: 700;
+}
+.content5 {
+    font-size: 13px;
+    color: #777;
+}
+
+.grid-testi {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.testi {
+    padding: 20px;
+    background-color: #fff;
+    margin: 30px 10px;
+}
+
+.profil {
+    display: flex;
+}
+
+.foto img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.nama {
+    display: block;
+}
+
+.namanya {
+    font-weight: 500;
+}
+.title {
+    list-style: none;
+    font-size: 11px;
+    display: ;
+}
+.title li {
+    display: inline-block;
+    padding-right: 15px;
+    position: relative;
+}
+.title li span {
+    color: #e71e5f;
+    font-weight: 500;
+}
+.isi {
+    font-size: 12px;
+    margin-top: 20px;
+    line-height: 20px;
+    color: #555;
+}
+
+.deskripsi {
+    margin-bottom: 20px;
+}
+
+/* halaman 5 */
+
+/* halaman 6 */
+
+.grid-article {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    gap: 10px;
+}
+
+.article {
+    padding: 20px;
+    background-color: #fff;
+    margin-top: 30px;
+    width: 100%;
+}
+ .article img {
+    align-items: center;
+    height: 10rem;
+    width: 100%;
+    max-width: 100%;
+ }
+
+ .deskripsi-blog {
+    padding: 20px;
+    background-color: #fff;
+ }
+
+ .judul-blog {
+    font-size: 15px;
+    font-weight: 500;
+    margin-bottom: 10px;
+ }
+
+ .isi-blog {
+    font-size: 12px;
+    color: #555;
+ }
+ .waktu {
+    margin-top: 20px;
+    list-style: none;
+    margin-left: 0;
+    padding: 0;
+    font-size: 12px;
+    color: #555;
+    display:flex ;
+ }
+
+/* halaman 6 */
+
+/* footer */
+
+.footer {
+    padding: 80px 0 30px;
+    /* background-color: rgb(240, 236, 236); */
+    height: auto;
+    background-color: #8c2370;
+    color: #fff;
+}
+
+.footer-luar {
+    width: 1000px;
+    max-width: 100%;
+    margin: auto;
+}
+
+.top-footer {
+    display: flex;
+}
+
+.top-kiri-footer {
+    width: 66.66%;
+}
+
+.top-kanan {
+    width: 33.33%;
+    text-align: right;
+}
+.top-kanan-footer div a {
+    color: #73205b;
+    background-color: #cfdb23;
+    border: 1px solid #e71e5f;
+    padding: 10px 25px;
+    border-radius: 5px;
+    display: inline-block;
+    font-weight: 400 ;
+    font-size: 14px;
+}
+
+.top-kanan div {
+    position: relative;
+}
