--- a/Parfum/lab-art.css
+++ b/Parfum/lab-art.css
@@ -56,28 +56,33 @@ body {
 
 .login-input {
     padding-top: 96px;
+    width: 456px;
 }
 .login-input label {
     font-size: 11px;
 }
 .number {
-    width: 456px;
+    width: 100%;
     height: 50px;
     margin-bottom: 19px;
-
+    border-radius: 5px;
+    border: none;
 }
 .password {
-    width: 456px;
+    width: 100%;
     height: 50px;
     margin-bottom: 33px;
+    border-radius: 5px;
+    border: none;
 }
 .tombol {
     background-color: #000000;
-    width: 456px;
+    width: 100%;
     height: 82px;
     color: #ffffff;
     font-size: 17px;
     font-weight: 500;
+    border-radius: 5px;
 }
 /* kiri */
 
@@ -104,6 +109,7 @@ body {
 
 .deskripsi {
     width: 477px;
+    max-width: 100%;
     height: 176px;
     position: absolute;
     /* z-index: 100; */
@@ -123,15 +129,43 @@ body {
 .parfume {
     font-size: 31px;
     text-align: center;
+    font-family: "dm serif display";
+    font-size: 31px;
+}
+.parfume::after {
+    content: "";
+    position: absolute;
+    width: 20px;
+    border: 1px solid #FFFFFF;
+    top: 49px;
+    left: 166px;
 }
 .designer {
     font-size: 11;
-    text-align: center;
-    display: flex;
-    align-items: center;
+    position: relative;
+    top: 17px;
+    padding-left: 49px;
 }
 .deskripsi .arrow {
     display: flex;
+    align-items: right;
+    position: relative;
+    left: 123px;
+}
+.arrow-right, .arrow-left {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 1px solid #FFFFFF;
+    background-color:  rgba(255, 255, 255, 0.3);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spasi {
+    width: 9px;
 }
 .deskripsi .isi {
     display: flex;
@@ -140,3 +174,140 @@ body {
 
 /* kanan */
 /* login */
+
+/* attendance */
+
+.top-nav {
+    width: 100%;
+    height: 90px;
+    display: flex;
+    /* justify-content: center; */
+    margin: auto;
+    padding: 51px;
+
+}
+.heading {
+    display: flex;
+}
+
+.logo-mark {
+    width: 91px;
+    height: 91px;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 31px;
+
+}
+.greetings {
+    /* width: 563px; */
+    height: 453px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.wellcome {
+    font-size: 17px;
+}
+
+.name {
+    font-family: "DM Serif Display";
+    font-style: italic;
+    font-size: 70px;
+    color: #EE754F;
+    padding-bottom: 30px;
+}
+
+.id {
+    padding: 20px 30px;
+    border-top: 1px solid #CBB498;
+}
+
+.list-style1 {
+    list-style: none;
+    display: inline-block;
+    position: relative;
+    margin-bottom: 25px;
+
+}
+.list-style1:before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #000000;
+    position: absolute;
+    border-radius: 50%;
+    left: 0px;
+    top: 7px;
+}
+.list-style1 li {
+    display: inline-block;
+}
+.list-style1 li:first-child {
+    margin-right: 20px;
+    padding-left: 15px;
+
+}
+.long-line {
+    display: inline-block;
+    width: 50px;
+    height: 1px;
+    background-color: #000;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+}
+
+.time {
+    display: flex;
+    /* flex-direction: column; */
+    background-color: #000000;
+    height: 82px;
+    width: 456px;
+    margin: 51px;
+}
+
+.mark {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.mark b {
+    font-size: 17px;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+.jam {
+    display: flex;
+    width: 30%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.kotak-jam {
+    width: 124px;
+    height: 56px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.kotak-jam b {
+    font-size: 20px;
+    padding-left: 14px;
+}
+/* attendance */
