--- a/Parfum/lab-art.css
+++ b/Parfum/lab-art.css
@@ -11,6 +11,100 @@
 body {
     background-color:#F5E9DB ;
 }
+
+/* top */
+
+.top-nav {
+    width: 100%;
+    height: 90px;
+    display: flex;
+    /* justify-content: center; */
+    margin-top: 51px;
+    /* padding: 51px; */
+
+}
+
+.heading {
+    display: flex;
+    /* flex-direction: column; */
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-kiri {
+    display: flex;
+    justify-content: start;
+    width: 20%;
+}
+
+.nav-kanan {
+    display: flex;
+    width: 80%;
+}
+.logo-mark {
+    width: 91px;
+    height: 91px;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: ;
+    left: 0;
+}
+
+.nav-bar {
+    width: auto;
+    display: flex;
+    /* flex-direction: column; */
+    width: 792px;
+    height: 72px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: 8px;
+}
+
+.feature {
+    width: 33.3333%;
+    display: flex;
+    background-color: #F5F5F5;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    justify-content: center;
+    align-items: center;
+}
+.catalog {
+    width: 33.3333%;
+    display: flex;
+    background-color: #F5F5F5;
+    margin: 0 12px 0 12px;
+    justify-content: center;
+    align-items: center;
+}
+.craft {
+    width: 33.3333%;
+    display: flex;
+    background-color: #EE754F;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+/* top */
+
+.mid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 31px;
+
+}
+
+
 .container {
     width: 1194px;
     max-width: 100%;
@@ -176,44 +270,14 @@ body {
 /* login */
 
 /* attendance */
-
-.top-nav {
-    width: 100%;
-    height: 90px;
-    display: flex;
-    /* justify-content: center; */
-    margin: auto;
-    padding: 51px;
-
-}
-.heading {
-    display: flex;
-}
-
-.logo-mark {
-    width: 91px;
-    height: 91px;
-    border-radius: 50%;
-    background-color: #FFFFFF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.mid {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 31px;
-
-}
 .greetings {
     /* width: 563px; */
-    height: 453px;
+    /* height: 453px; */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
 }
 
 .wellcome {
@@ -231,6 +295,7 @@ body {
 .id {
     padding: 20px 30px;
     border-top: 1px solid #CBB498;
+    margin-bottom: 51px;
 }
 
 .list-style1 {
@@ -268,13 +333,12 @@ body {
     margin-bottom: 5px;
 }
 
-.time {
+.black-box {
     display: flex;
     /* flex-direction: column; */
     background-color: #000000;
     height: 82px;
     width: 456px;
-    margin: 51px;
 }
 
 .mark {
@@ -310,4 +374,155 @@ body {
     font-size: 20px;
     padding-left: 14px;
 }
+
+.cancel {
+    margin-top: 51px;
+}
 /* attendance */
+
+/* fragrance 1 */
+
+.judul {
+    display: flex;
+    align-items: center;
+    margin-top: 74px ;
+}
+
+
+.judul div {
+    font-size: 30px;
+    font-family: "dm serif display";
+    display: inline-block;
+}
+
+/* fragrance 1 */
+
+.slide {
+    display: inline-block;
+    margin-top: 43px
+}
+.slide-content li {
+    display: inline-block;
+    position: relative;
+    list-style: none;
+    padding-left: 40px;
+    border-bottom: 1px solid #ffffff;
+    padding-right: 36px;
+}
+
+.slide-content li:first-child {
+    border-bottom: 1px solid #000000;
+}
+
+.slide-content li::before {
+    content: "";
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    position: absolute;
+    left: -3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slide-content li:first-child:before {
+    content: "1" ;
+    color: #FFFFFF;
+    background-color: #000;
+    position: absolute;
+}
+
+.slide-content li:nth-child(2):before {
+    content: "2";
+    /* color: #000; */
+}
+.slide-content li:last-child::before {
+    content: "3";
+}
+
+.next {
+    width: 60%;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    padding-left: 24px;
+    font-size: 17px;
+    font-weight: 500;
+}
+
+.select {
+    width: 40%;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.white-box {
+    width: 175px;
+    height: 56px;
+    background-color: #FFFFFF;
+    color: #000000;
+    font-size: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.white-box div span {
+    font-weight: 700;
+}
+
+
+.pyramid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 72px;
+    margin-bottom: 35px;
+}
+
+.pyramid1 {
+    width: 269px;
+    background-color: #F4D3C1;
+    height: 67px;
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.pyramid2 {
+    width: 407px;
+    background-color: #F1A386;
+    height: 67px;
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.pyramid3 {
+    width: 521px;
+    background-color: #EE754F;
+    height: 67px;
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.pyramid img {
+    width: 15px;
+    height: 15px;
+    right: 20;
+    position: absolute;
+}
+.text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
