--- a/Parfum/lab-art.css
+++ b/Parfum/lab-art.css
@@ -601,3 +601,117 @@ body {
 }
 
 /* lab 4 */
+
+/* lab 5 */
+
+.nav-kanan-filter {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    background-color: #555555;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.product-and-search-bar {
+    display: flex;
+    margin-top: 85px;
+    position: relative;
+    height: 58px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.product-and-search-bar .left {
+    width: 50%;
+    display:;
+    position: absolute;
+    left: 0;
+    font-family: "dm serif display";
+    font-size: 35px;
+    padding-left: 45px;
+}
+.product-and-search-bar .right {
+    width: 50%;
+    display: flex;
+    position: absolute;
+    justify-content: right;
+    right: 0;
+    padding-right: 45px;
+}
+.product-and-search-bar .right input {
+    width: 300px;
+    height: 58px;
+    border: none;
+    padding-left: 21px;
+    /* background: transparent url(img/search.png) no-repeat 24px; */
+}
+.product-and-search-bar .right button {
+    width: 36px;
+    /* background-image: url(img/search.png) no-repeat center; */
+    /* background: transparent; */
+    border: none;
+    background-color: #FFFFFF;
+    padding-right: 21px;
+    cursor: pointer;
+}
+
+.mid-lab-art5 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 31px;
+    flex-direction: column;
+    margin-top: 55px;
+}
+.catalog-parfume {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 93%;
+    margin-bottom: 31px;
+    /* flex-direction: column; */
+}
+.catalog-parfume:last-child {
+    margin-bottom: 0;
+
+}
+.catalog-grid1 {
+    width: 219px;
+    height: 242px;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    padding: 8px 7px;
+    /* margin-right: 38px; */
+}
+.catalog-grid1 img {
+    width: 204px;
+    height: 225px;
+    border-radius: 5px;
+}
+
+.page-number {
+    display: flex;
+    justify-content: center;
+    margin-top: 83px;
+    
+}
+
+.page-number div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    background-color: #FFFFFF;
+    margin-left: 14px;
+}
+
+.page-number div:first-child {
+    margin-left: 0;
+    background-color: #EE754F;
+}
+/* lab 5 end */
