--- a/website/website.css
+++ b/website/website.css
@@ -446,7 +446,103 @@
 /* profil form */
 /* profil form */
 
+.data-cuti {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 646px;
+    height: 138px;
+}
 
+.data-cuti div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 12px;
+    color: #383838;
+}
+
+.data-cuti div b {
+    font-size: 32px;
+}
+
+.garis-tengah {
+    height: 114px;
+    border: 1px solid #bfbfbf;
+}
+.mid-progres {
+    /* width: 931px; */
+    height: 38px;
+    border-radius: 24px;
+    background-color: #383838;
+    width: 100%;
+    margin-top: 24px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.progres-bar {
+    background-color: #383838;
+    color: #FFFFFF;
+    width: 310px;
+    border-radius: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.form-cuti {
+    background-color: #FFFFFF;
+    color: #383838;
+}
+
+.mini-location {
+    margin-top: 24px;
+    display: flex;
+}
+
+.mini-home svg {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.mini-cuti {
+    color: #E0215C;
+}
+.mini-home {
+    color: #383838;
+}
+
+#alasan {
+    height: 150px;
+    padding: 0;
+    border: 1px solid #bfbfbf;
+    border-radius: 5px;
+    margin-top: 14px;
+    margin-bottom: 24px;
+    width: 100%;
+    padding: 16px;
+}
+
+/* cuti */
+/* cuti */
+/* cuti */
+/* cuti */
+
+/* riwayat cuti */
+/* riwayat cuti */
+/* riwayat cuti */
+
+.filter {
+    display: flex;
+}
+
+/* riwayat cuti */
+/* riwayat cuti */
+/* riwayat cuti */
 
 
 
